--- a/client/scripts/app/components/main/main.component.html
+++ b/client/scripts/app/components/main/main.component.html
@@ -1,1 +1,8 @@
 <div>main</div>
+
+
+<a [routerLink]="['Calendar']">Calendrier des parcours</a>
+<a [routerLink]="['Tracks']">Liste des parcours</a>
+
+<!-- Routed views go here -->
+<router-outlet></router-outlet>
