feat(front/back): get and display track list

--- a/client/scripts/app/components/tracks/tracks.component.html
+++ b/client/scripts/app/components/tracks/tracks.component.html
@@ -1,1 +1,8 @@
 <div>Parcours</div>
+
+<p *ngIf="errorMessage">Erreur : {{errorMessage}}</p>
+
+<p>Liste :</p>
+<div *ngFor="#track of tracks">
+    Parcours {{track.name}}
+</div>
