feat(front): add polymer dependencies and try it. Add docker commands for mongodb

--- a/client/scripts/app/components/main/main.component.html
+++ b/client/scripts/app/components/main/main.component.html
@@ -1,5 +1,13 @@
 <div>main</div>
 
+<div>
+    <paper-button>button</paper-button>
+</div>
+<div>
+    <paper-checkbox>check</paper-checkbox>
+</div>
+
+<paper-icon-button icon="lock">icon</paper-icon-button>
 
 <a [routerLink]="['Calendar']">Calendrier des parcours</a>
 <a [routerLink]="['Tracks']">Liste des parcours</a>
