refactor(project): upgrade to angular2-rc5, create modules and login screen squeletton
fix(all): fix authentication + fix MDL

--- a/src/index.scss
+++ b/src/index.scss
@@ -1,7 +1,7 @@
-@import "./variables";
-@import "~material-design-lite/src/color-definitions";
-@import "~material-design-lite/src/material-design-lite-grid.scss";
-@import "~material-design-lite/src/material-design-lite.scss";
+@import "variables";
+@import "../node_modules/material-design-lite/src/color-definitions";
+@import "../node_modules/material-design-lite/src/material-design-lite-grid";
+@import "../node_modules/material-design-lite/src/material-design-lite";
 
 body {
 }
