fix(): fix css font loading and MDL on login

--- a/src/app/app.style.scss
+++ b/src/app/app.style.scss
@@ -1,4 +1,5 @@
 @import "./variables";
+@import "~mdi/scss/materialdesignicons";
 @import "~material-design-lite/src/color-definitions";
 @import "~material-design-lite/src/material-design-lite-grid.scss";
 @import "~material-design-lite/src/material-design-lite.scss";
