--- a/src/app/admin/admin.component.html
+++ b/src/app/admin/admin.component.html
@@ -1,17 +1,17 @@
 <div mdl class="mdl-layout mdl-js-layout mdl-layout--fixed-header">
-    <header class="mdl-layout__header">
-        <div class="mdl-layout__header-row">
-            <span class="mdl-layout-title">Administration</span>
-        </div>
-        <div class="mdl-layout__tab-bar mdl-js-ripple-effect">
-            <a [routerLink]="['tracks']" class="mdl-layout__tab is-active">Parcours</a>
-            <a [routerLink]="['events']" class="mdl-layout__tab">Randonnées</a>
-        </div>
-    </header>
-    <div class="mdl-layout__drawer">
-        <span class="mdl-layout-title">Title</span>
+  <header class="mdl-layout__header">
+    <div class="mdl-layout__header-row">
+      <span class="mdl-layout-title">Administration</span>
     </div>
-    <main class="mdl-layout__content">
-        <router-outlet></router-outlet>
-    </main>
+    <div class="mdl-layout__tab-bar mdl-js-ripple-effect">
+      <a [routerLink]="['tracks']" class="mdl-layout__tab" [routerLinkActive]="['is-active']">Parcours</a>
+      <a [routerLink]="['events']" class="mdl-layout__tab" [routerLinkActive]="['is-active']">Randonnées</a>
+    </div>
+  </header>
+  <div class="mdl-layout__drawer">
+    <span class="mdl-layout-title">Title</span>
+  </div>
+  <main class="mdl-layout__content">
+    <router-outlet></router-outlet>
+  </main>
 </div>
