feat(admin): add edit event component

--- a/src/app/admin/admin-edit-track/admin-edit-track.component.html
+++ b/src/app/admin/admin-edit-track/admin-edit-track.component.html
@@ -1,4 +1,4 @@
-<div mdl id="login-card" class="mdl-card mdl-shadow--2dp">
+<div mdl class="mdl-card mdl-shadow--2dp">
     <div class="mdl-card__title">
         <h2 class="mdl-card__title-text">Nouveau parcours</h2>
     </div>
