--- a/src/app/event-browser/event-browser.component.html
+++ b/src/app/event-browser/event-browser.component.html
@@ -1,27 +1,30 @@
 <div mdl #mdlLayout class="mdl-layout mdl-js-layout mdl-layout--fixed-header">
-    <!-- spinner -->
-    <div class="mdl-progress mdl-js-progress mdl-progress__indeterminate" [hidden]="currentEvent"></div>
-    <header class="mdl-layout__header">
-        <div class="mdl-layout__header-row">
-            <event-details [event]="currentEvent"></event-details>
-            <div class="mdl-layout-spacer"></div>
-            <!-- Navigation -->
-            <nav class="mdl-navigation">
-              <a class="mdl-navigation__link" [routerLink]="['admin','tracks']"><i class="mdi mdi-settings"></i>Admin</a>
-            </nav>
-        </div>
-        <div class="mdl-layout__tab-bar mdl-js-ripple-effect">
-            <a *ngFor="let loop of loops; let i = index" class="mdl-layout__tab"
-               [class.is-active]="loop.$key == currentTrack?.$key"
-               [routerLink]="['']" [queryParams]="{eventId:currentEvent.$key,trackId:loop.$key}">
-                Boucle {{i + 1}} (<i class="mdi mdi-math-compass"></i> {{loop.distance | number}} km)
-            </a>
-        </div>
-    </header>
-    <div class="mdl-layout__drawer" #drawer>
-        <event-list (click)="onEventClick()"></event-list>
+  <!-- spinner -->
+  <div class="mdl-progress mdl-js-progress mdl-progress__indeterminate" [hidden]="event$ | async"></div>
+  <header class="mdl-layout__header">
+    <div class="mdl-layout__header-row">
+      <event-details [event]="event$ | async"></event-details>
+      <div class="mdl-layout-spacer"></div>
+      <!-- Navigation -->
+      <nav class="mdl-navigation">
+        <a class="mdl-navigation__link" [routerLink]="['admin','tracks']"><i class="mdi mdi-settings"></i>Admin</a>
+      </nav>
     </div>
-    <main class="mdl-layout__content">
-        <map [trackId]="trackId$ | async" (trackLoaded)="onTrackLoaded($event)"></map>
-    </main>
+
+    <div class="mdl-layout__tab-bar mdl-js-ripple-effect">
+      <loop-link  *ngFor="let loop of tracks$ | async; let i = index"
+                 [loop]="loop"
+                 [index]="i"
+                 [currentTrack]="currentTrack$ | async"
+                 [event]="event$ | async"
+      ></loop-link>
+    </div>
+
+  </header>
+  <div class="mdl-layout__drawer" #drawer>
+    <event-list (click)="onEventClick()"></event-list>
+  </div>
+  <main class="mdl-layout__content">
+    <map [track]="currentTrack$ | async"></map>
+  </main>
 </div>
