feat(admin): add edit event screen

--- a/src/app/admin/admin-edit-event/admin-edit-event.component.html
+++ b/src/app/admin/admin-edit-event/admin-edit-event.component.html
@@ -1,36 +1,42 @@
-<div mdl  class="mdl-card mdl-shadow--2dp">
-  <div class="mdl-card__title">
-    <h2 class="mdl-card__title-text">Nouvel évènement</h2>
-  </div>
-  <div class="mdl-card__supporting-text">
-    <form [formGroup]="addForm" (submit)="onSubmit()" action="#">
+<div>
+  <h4>Évènement</h4>
+  <form [formGroup]="addForm" (submit)="onSubmit()" action="#">
+    <div>
       <div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label">
         <label class="mdl-textfield__label" for="name-input">Nom</label>
         <input class="mdl-textfield__input" type="text" id="name-input" formControlName="name" required>
       </div>
-      <div class="mdl-selectfield mdl-js-selectfield mdl-selectfield--floating-label">
-        <label class="mdl-selectfield__label" for="type-input">Type</label>
-        <select formControlName="type" id="type-input">
-          <option value="LRFN">Friday Night</option>
-          <option value="ROL_CITY">ROL City</option>
-          <option value="RANDOXYGENE">Randoxygène</option>
-        </select>
-      </div>
-      <div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label">
-        <label class="mdl-textfield__label" for="distance-input">Distance en km</label>
-        <input class="mdl-textfield__input" type="text" id="distance-input"
-               pattern="[0-9]*(\.[0-9]+)?"
-               formControlName="distance" required>
-      </div>
-      <div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label">
-        <label class="mdl-textfield__label" for="kmlContent-input">Contenu KML</label>
-        <textarea class="mdl-textfield__input" type="text" rows="10" id="kmlContent-input"
-                  formControlName="kmlContent"></textarea>
-      </div>
+    </div>
+    <div class="mdl-selectfield mdl-js-selectfield mdl-selectfield--floating-label">
+      <label for="type-input" class="mdl-selectfield__label">Type</label>
+      <select id="type-input" class="mdl-selectfield__select"
+              formControlName="type">
+        <option *ngFor="let type of types$ | async" [attr.value]="type.$key">{{type.$value}}</option>
+      </select>
+    </div>
 
+    <div>
+      <div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label">
+        <input class="mdl-textfield__input" type="text" pattern="[0-9]{2}/[0-9]{2}/[0-9]{4}" id="date-input"
+               formControlName="dateTime">
+        <label class="mdl-textfield__label" for="date-input">Date</label>
+        <span class="mdl-textfield__error">Format de la date jj/mm/aaaa</span>
+      </div>
+    </div>
+
+    <div>
+      <ul class="mdl-list">
+        <li *ngFor="let loop of (loops$ | async); let i=index" class="mdl-list__item">
+          <span>Boucle {{i}}</span>
+          <span class="mdl-list__item-primary-content">{{loop.name}}</span>
+        </li>
+      </ul>
+    </div>
+
+    <div>
       <button type="submit" class="mdl-button mdl-js-button mdl-button--fab mdl-button--colored mdl-js-ripple-effect">
         <i class="material-icons">save</i>
       </button>
-    </form>
-  </div>
+    </div>
+  </form>
 </div>
