--- a/src/app/event-browser/event-browser.component.html
+++ b/src/app/event-browser/event-browser.component.html
@@ -1,4 +1,4 @@
-<div mdl #mdlLayout class="mdl-layout mdl-js-layout mdl-layout--fixed-header">
+<div #mdlLayout class="mdl-layout mdl-js-layout mdl-layout--fixed-header">
   <!-- spinner -->
   <div class="mdl-progress mdl-js-progress mdl-progress__indeterminate" [hidden]="event$ | async"></div>
   <header class="mdl-layout__header">
