--- a/src/app/admin/admin-edit-track/admin-edit-track.component.html
+++ b/src/app/admin/admin-edit-track/admin-edit-track.component.html
@@ -1,36 +1,40 @@
-<div mdl class="mdl-card mdl-shadow--2dp">
-    <div class="mdl-card__title">
-        <h2 class="mdl-card__title-text">Nouveau parcours</h2>
-    </div>
-    <div class="mdl-card__supporting-text">
-        <form [formGroup]="addForm" (submit)="onSubmit()" action="#">
-            <div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label">
-                <label class="mdl-textfield__label" for="name-input">Nom</label>
-                <input class="mdl-textfield__input" type="text" id="name-input" formControlName="name" required>
-            </div>
-            <div class="mdl-selectfield mdl-js-selectfield mdl-selectfield--floating-label">
-                <label class="mdl-selectfield__label" for="type-input">Type</label>
-                <select formControlName="type" id="type-input">
-                    <option value="LRFN">Friday Night</option>
-                    <option value="ROL_CITY">ROL City</option>
-                    <option value="RANDOXYGENE">Randoxygène</option>
-                </select>
-            </div>
-            <div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label">
-                <label class="mdl-textfield__label" for="distance-input">Distance en km</label>
-                <input class="mdl-textfield__input" type="text" id="distance-input"
-                       pattern="[0-9]*(\.[0-9]+)?"
-                       formControlName="distance" required>
-            </div>
-            <div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label">
-                <label class="mdl-textfield__label" for="kmlContent-input">Contenu KML</label>
-                <textarea class="mdl-textfield__input" type="text" rows="10" id="kmlContent-input"
-                       formControlName="kmlContent"></textarea>
-            </div>
+<mdl-card mdl-shadow="2">
+  <mdl-card-title>
+    <h2 mdl-card-title-text>Parcours</h2>
+  </mdl-card-title>
+  <form (submit)="onSubmit()">
+    <mdl-textfield type="text" label="Nom"
+                   name="name"
+                   [(ngModel)]="track.name"
+                   floating-label required></mdl-textfield>
+    <mdl-select #typeSelect
+                type="text"
+                name="type"
+                label="Type"
+                [(ngModel)]="track.type"
+                (change)="onTypeChanged()"
+                placeholder="Sélectionner le type"
+                floating-label required
+    >
+      <mdl-option *ngFor="let option of TYPES" [value]="option.key">{{option.value}}</mdl-option>
+    </mdl-select>
 
-            <button type="submit" class="mdl-button mdl-js-button mdl-button--fab mdl-button--colored mdl-js-ripple-effect">
-                <i class="material-icons">save</i>
-            </button>
-        </form>
-    </div>
-</div>
+    <mdl-textfield type="number"
+                   name="distance"
+                   label="Distance"
+                   floating-label required
+                   [(ngModel)]="track.distance"
+    ></mdl-textfield>
+    <mdl-textfield type="text" rows="5"
+                   label="Contenu KML"
+                   name="kmlContent"
+                   floating-label required
+                   placeholder="Contenu KML"
+                   [(ngModel)]="track.kmlContent"
+    >Contenu KML
+    </mdl-textfield>
+    <button type="submit" mdl-button mdl-button-type="mini-fab" mdl-colored="primary">
+      <mdl-icon>save</mdl-icon>
+    </button>
+  </form>
+</mdl-card>
