--- a/src/app/admin/admin-event-list/admin-event-list.component.html
+++ b/src/app/admin/admin-event-list/admin-event-list.component.html
@@ -1,18 +1,16 @@
 <div class="track-list-container">
-  <ul class="mdl-list">
-    <li class="mdl-list__item mdl-list__item mdl-list__item--three-line"
-        *ngFor="let event of events$ | async"
-        (click)="onEventClick(event)">
-                <span class="mdl-list__item-primary-content">
-                    <span>{{event.name}}</span>
-                </span>
-      <span class="mdl-list__item-secondary-content">
-                  <a class="mdl-list__item-secondary-action" [routerLink]="['edit',event.$key]"><i
-                    class="material-icons">mode edit</i></a>
-                  <a class="mdl-list__item-secondary-action" (click)="deleteEvent(event)"><i class="material-icons">delete</i></a>
-                </span>
-    </li>
-  </ul>
+  <mdl-list>
+    <mdl-list-item lines="3" mdl-ripple
+                   *ngFor="let event of events$ | async"
+                   (click)="onEventClick(event)">
+      <mdl-list-item-primary-content>
+        <span>{{event.name}}</span>
+      </mdl-list-item-primary-content>
+      <mdl-list-item-secondary-content>
+        <a (click)="deleteEvent(event)"><i class="material-icons">delete</i></a>
+      </mdl-list-item-secondary-content>
+    </mdl-list-item>
+  </mdl-list>
 </div>
 <button id="add-button" class="mdl-button mdl-js-button mdl-button--fab mdl-button--colored mdl-js-ripple-effect"
         (click)="router.navigate(['admin','events','edit'])">
