--- a/src/app/admin/admin-track-list/admin-track-list.component.html
+++ b/src/app/admin/admin-track-list/admin-track-list.component.html
@@ -1,21 +1,19 @@
 <div class="track-list-container">
-  <ul class="mdl-list">
-    <li class="mdl-list__item mdl-list__item mdl-list__item--three-line"
-        *ngFor="let track of tracks$ | async"
-        (click)="onTrackClick(track)">
-                <span class="mdl-list__item-primary-content">
-                    <span>{{track.name}}</span>
-                    <span class="mdl-list__item-text-body">
+  <mdl-list>
+    <mdl-list-item lines="3" mdl-ripple *ngFor="let track of tracks$ | async"
+                   (click)="onTrackClick(track)">
+      <mdl-list-item-primary-content>
+        <span>{{track.name}}</span>
+        <span class="mdl-list__item-text-body">
                         <span><i class="mdi mdi-math-compass"></i> {{track.distance | number}} km</span>
                         <span>{{track.type}}</span>
                     </span>
-                </span>
-      <span class="mdl-list__item-secondary-content">
-                  <a class="mdl-list__item-secondary-action" (click)="router.navigate(['admin','tracks', 'edit', track.$key])"><i class="material-icons">mode edit</i></a>
-                  <a class="mdl-list__item-secondary-action" (click)="onTrackDelete(track)"><i class="material-icons">delete</i></a>
-                </span>
-    </li>
-  </ul>
+      </mdl-list-item-primary-content>
+      <mdl-list-item-secondary-content>
+        <a (click)="onTrackDelete(track)"><i class="material-icons">delete</i></a>
+      </mdl-list-item-secondary-content>
+    </mdl-list-item>
+  </mdl-list>
 </div>
 <button id="add-button" class="mdl-button mdl-js-button mdl-button--fab mdl-button--colored mdl-js-ripple-effect"
         (click)="router.navigate(['admin','addTrack'])">
