feat(admin): improve track and event admin screens

--- a/src/app/admin/admin.component.scss
+++ b/src/app/admin/admin.component.scss
@@ -1,3 +1,5 @@
+@import "~angular2-mdl/scss/mdl/typography/_typography.scss";
+
 main {
   margin: 20px;
 }
@@ -6,4 +8,15 @@ main {
   position: absolute;
   width: 80%;
   heigth: 80%;
+}
+
+.mdl-navigation__link {
+  &.is-active {
+    @extend .mdl-typography--font-bold;
+  }
+}
+
+mdl-layout-content{
+  margin-left: 5vw;
+  margin-right: 5vw;
 }
