--- a/src/app/variables.scss
+++ b/src/app/variables.scss
@@ -1,8 +1,8 @@
 @import "~angular2-mdl/scss/color-definitions";
 $layout-drawer-width: 456px;
-$color-primary: $palette-blue-500;
-$color-primary-dark: $palette-blue-700;
-$color-accent: $palette-amber-A200;
+$color-primary: $palette-green-500;
+$color-primary-dark: $palette-green-700;
+$color-accent: $palette-light-green-500;
 $color-primary-contrast: $color-dark-contrast;
 $color-accent-contrast: $color-dark-contrast;
 
