--- a/src/app/admin/admin-edit-track/admin-edit-track.component.html
+++ b/src/app/admin/admin-edit-track/admin-edit-track.component.html
@@ -1,40 +1,50 @@
-<mdl-card mdl-shadow="2">
-  <mdl-card-title>
-    <h2 mdl-card-title-text>Parcours</h2>
-  </mdl-card-title>
-  <form (submit)="onSubmit()">
-    <mdl-textfield type="text" label="Nom"
-                   name="name"
-                   [(ngModel)]="track.name"
-                   floating-label required></mdl-textfield>
-    <mdl-select #typeSelect
-                type="text"
-                name="type"
-                label="Type"
-                [(ngModel)]="track.type"
-                (change)="onTypeChanged()"
-                placeholder="Sélectionner le type"
-                floating-label required
-    >
-      <mdl-option *ngFor="let option of TYPES" [value]="option.key">{{option.value}}</mdl-option>
-    </mdl-select>
+<div class="mdl-grid">
+  <div class="mdl-cell--6-col mdl-cell--4-col-phone">
+    <h1>Parcours</h1>
+    <form (submit)="onSubmit()">
+      <div>
+        <mdl-textfield type="text" label="Nom"
+                       name="name"
+                       [(ngModel)]="track.name"
+                       floating-label required></mdl-textfield>
+      </div>
+      <div>
+        <label >Categorie</label>
+        <div *ngFor="let option of TYPES">
+          <mdl-radio
+            name="typeGroup"
+            [(ngModel)]="track.type"
+            [value]="option.key"
+            mdl-ripple>
+            {{option.value}}
+          </mdl-radio>
+        </div>
+      </div>
 
-    <mdl-textfield type="number"
-                   name="distance"
-                   label="Distance"
-                   floating-label required
-                   [(ngModel)]="track.distance"
-    ></mdl-textfield>
-    <mdl-textfield type="text" rows="5"
-                   label="Contenu KML"
-                   name="kmlContent"
-                   floating-label required
-                   placeholder="Contenu KML"
-                   [(ngModel)]="track.kmlContent"
-    >Contenu KML
-    </mdl-textfield>
-    <button type="submit" mdl-button mdl-button-type="mini-fab" mdl-colored="primary">
-      <mdl-icon>save</mdl-icon>
-    </button>
-  </form>
-</mdl-card>
+      <div>
+        <mdl-textfield type="number"
+                       name="distance"
+                       label="Distance (km)"
+                       floating-label required
+                       [(ngModel)]="track.distance"
+        ></mdl-textfield>
+      </div>
+      <div>
+        <mdl-textfield type="text" rows="5"
+                       label="Contenu KML"
+                       name="kmlContent"
+                       floating-label required
+                       placeholder="Contenu KML"
+                       [(ngModel)]="kmlContent"
+        >Contenu KML
+        </mdl-textfield>
+      </div>
+      <button type="submit" mdl-button mdl-button-type="mini-fab" mdl-colored="primary">
+        <mdl-icon>save</mdl-icon>
+      </button>
+    </form>
+  </div>
+  <div class="mdl-cell--6-col mdl-cell--4-col-phone">
+    <map [track]="track$ | async"></map>
+  </div>
+</div>
