--- a/src/app/admin/admin-event-list/admin-event-list.component.html
+++ b/src/app/admin/admin-event-list/admin-event-list.component.html
@@ -1,14 +1,16 @@
-<div class="track-list-container">
+<div class="event-list-container">
   <mdl-list>
     <mdl-list-item lines="3" mdl-ripple
                    *ngFor="let event of events$ | async"
                    (click)="onEventClick(event)">
       <mdl-list-item-primary-content>
         <span>{{event.name}}</span>
+        <mdl-list-item-text-body>
+          {{event.dateTime | date:'dd/MM/yyyy'}}<br/>
+          {{'TYPES.' + event.type | translate}}
+        </mdl-list-item-text-body>
       </mdl-list-item-primary-content>
-      <mdl-list-item-secondary-content>
-        <a (click)="deleteEvent(event)"><i class="material-icons">delete</i></a>
-      </mdl-list-item-secondary-content>
+      <a (click)="deleteEvent(event)"><i class="material-icons">delete</i></a>
     </mdl-list-item>
   </mdl-list>
 </div>
