--- a/src/app/admin/admin.component.html
+++ b/src/app/admin/admin.component.html
@@ -1,11 +1,15 @@
 <mdl-layout mdl-layout-fixed-header>
   <mdl-layout-header>
     <mdl-layout-header-row>
-      <mdl-layout-title>Administration</mdl-layout-title>
+      <mdl-layout-title>{{'ADMIN' | translate:params }}</mdl-layout-title>
 
       <nav class="mdl-navigation">
-        <a class="mdl-navigation__link" [routerLink]="['tracks']">Parcours</a>
-        <a class="mdl-navigation__link" [routerLink]="['events']">Randonnées</a>
+        <a class="mdl-navigation__link" routerLink="/admin/tracks" routerLinkActive="is-active">{{'TRACK' | translate }}</a>
+        <a class="mdl-navigation__link" routerLink="/admin/events" routerLinkActive="is-active">{{'EVENT' | translate }}</a>
+      </nav>
+      <div class="mdl-layout-spacer"></div>
+      <nav class="mdl-navigation">
+        <a class="mdl-navigation__link" routerLink="/"><i class="mdi mdi-settings"></i>{{ 'BACK' | translate }}</a>
       </nav>
     </mdl-layout-header-row>
   </mdl-layout-header>
