--- a/src/app/admin/admin.component.html
+++ b/src/app/admin/admin.component.html
@@ -1,7 +1,7 @@
 <mdl-layout mdl-layout-fixed-header>
   <mdl-layout-header>
     <mdl-layout-header-row>
-      <mdl-layout-title>{{'ADMIN' | translate:params }}</mdl-layout-title>
+      <mdl-layout-title>{{'ADMIN.TITLE' | translate:params }}</mdl-layout-title>
 
       <nav class="mdl-navigation">
         <a class="mdl-navigation__link" routerLink="/admin/tracks" routerLinkActive="is-active">{{'TRACK' | translate }}</a>
