refactor(model): use a single file for models

--- a/src/app/admin/admin-edit-event/admin-edit-event.component.html
+++ b/src/app/admin/admin-edit-event/admin-edit-event.component.html
@@ -25,7 +25,7 @@
       ></mdl-textfield>
     </div>
 
-    <ul>
+    <ul class="loop-list">
       <li *ngFor="let loop of (loops$ | async); let i=index">
         <mdl-chip
           mdl-action-icon="cancel" (action-click)="deleteLoop(i)" mdl-label="{{loop.name}}">
