--- a/src/app/admin/admin-loop-popin/admin-loop-popin.component.html
+++ b/src/app/admin/admin-loop-popin/admin-loop-popin.component.html
@@ -1,3 +1,5 @@
-<div>
-  <h1>{{'ADMIN.EVENT.ADD_LOOP.TITLE' | translate}}</h1>
+<div id="popup" class="overlay">
+  <div class="popup">
+    <h1>{{'ADMIN.EVENT.ADD_LOOP.TITLE' | translate}}</h1>
+  </div>
 </div>
