--- a/src/app/admin/admin-loop-popin/admin-loop-popin.component.scss
+++ b/src/app/admin/admin-loop-popin/admin-loop-popin.component.scss
@@ -1,17 +1,19 @@
-.overlay {
-  position: fixed;
-  top: 0;
-  bottom: 0;
-  left: 0;
-  right: 0;
-  background: rgba(0, 0, 0, 0.7);
-  transition: opacity 500ms;
-  visibility: hidden;
-  opacity: 0;
+.popup {
+  &__overlay {
+    position: fixed;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    background: rgba(0, 0, 0, 0.7);
+    z-index: 1000;
+  }
 
-  &.open {
-    visibility: visible;
-    opacity: 1;
+  &__content {
+    overflow-y: scroll;
+    max-height: 75%;
+    width: 30%;
+    margin: 70px auto;
+    position: relative;
   }
 }
-
