--- a/src/app/event-browser/event-browser.component.scss
+++ b/src/app/event-browser/event-browser.component.scss
@@ -1,3 +1,16 @@
+@import "../common";
+
 .mdl-progress {
   width: 100vw;
+}
+
+
+.jsrol-header {
+  &__row {
+    align-items: flex-end;
+
+    loop-link {
+      margin-right: 20px;
+    }
+  }
 }
