--- a/src/app/admin/admin-loop-dialog/admin-loop-dialog.component.html
+++ b/src/app/admin/admin-loop-dialog/admin-loop-dialog.component.html
@@ -1,7 +1,7 @@
 <mdl-dialog #dialog
             [mdl-dialog-config]="{
               clickOutsideToClose: true,
-              styles: {width:'75%'},
+              styles: {width:'500px'},
               isModal:true,
               enterTransitionDuration: 400,
               leaveTransitionDuration: 400}">
