--- a/src/app/admin/track-list-selector/track-list-selector.component.scss
+++ b/src/app/admin/track-list-selector/track-list-selector.component.scss
@@ -3,3 +3,13 @@
 .pagination__controls /deep/ .ng2-pagination .current {
   background: unquote("rgb(#{$color-primary})") !important;
 }
+
+.track-list {
+  &__container {
+    height: 100vh;
+  }
+
+  &__list{
+    width: 400px;
+  }
+}
