--- a/src/app/admin/track-list-selector/track-list-selector.component.html
+++ b/src/app/admin/track-list-selector/track-list-selector.component.html
@@ -1,24 +1,28 @@
 <jsrol-filter (filterChanged)="onFilterChanged($event)"></jsrol-filter>
 
-<div class="track-list-container">
-  {{actionDelete}}
+<div class="track-list__container">
   <pagination-controls class="pagination__controls" (pageChange)="p = $event"
                        previousLabel="{{'PAGINATION.PREVIOUS' | translate}}"
                        nextLabel="{{'PAGINATION.NEXT' | translate}}"></pagination-controls>
-  <mdl-list>
-    <mdl-list-item lines="3" mdl-ripple
+  <mdl-list class="track-list__list">
+    <mdl-list-item lines="2" mdl-ripple
                    *ngFor="let track of tracks$ | async | trackFilter:filter | paginate:{ itemsPerPage: itemsPerPage, currentPage: p}"
                    (click)="onTrackClick(track)">
       <mdl-list-item-primary-content>
         <span>{{track.name}}</span>
-        <span class="mdl-list__item-text-body">
-                        <span><i class="mdi mdi-math-compass"></i> {{track.distance | number}} km</span>
-                        <span>{{'TYPES.' + track.type | translate}}</span>
-                    </span>
+        <mdl-list-item-sub-title>
+            <span class="mdl-list__item-text-body">
+                  <span>{{'TYPES.' + track.type | translate}}</span>
+                  <span><i class="mdi mdi-math-compass"></i> {{track.distance | number}} km</span>
+              </span>
+        </mdl-list-item-sub-title>
       </mdl-list-item-primary-content>
-      <a *ngIf="actionDelete" (click)="onTrackDelete(track)">
-        <mdl-icon>delete</mdl-icon>
-      </a>
+      <mdl-list-item-secondary-content>
+        <a *ngIf="actionDelete" (click)="onTrackDelete(track)">
+          <mdl-icon>delete</mdl-icon>
+        </a>
+      </mdl-list-item-secondary-content>
+
     </mdl-list-item>
   </mdl-list>
 </div>
