--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,5 +1,6 @@
 @import "./variables";
 @import '~angular2-mdl/scss/material-design-lite';
+@import '~mdi/scss/materialdesignicons.scss';
 
 html, body{
   height: 100%;
