--- a/src/app/admin/admin-event-list/admin-event-list.component.html
+++ b/src/app/admin/admin-event-list/admin-event-list.component.html
@@ -1,13 +1,25 @@
+<div>
+  <mdl-textfield type="date"
+                 name="fromDate"
+                 [(ngModel)]="filterForm.fromDate"
+                 (change)="onFilterChanged()"
+                 floating-label
+  ></mdl-textfield>
+</div>
+
+<pagination-controls class="pagination__controls" (pageChange)="p = $event"
+                     previousLabel="{{'PAGINATION.PREVIOUS' | translate}}"
+                     nextLabel="{{'PAGINATION.NEXT' | translate}}"></pagination-controls>
+
 <div class="event-list-container">
   <mdl-list>
-    <mdl-list-item lines="3" mdl-ripple
-                   *ngFor="let event of events$ | async"
-                   (click)="onEventClick(event)">
-      <mdl-list-item-primary-content>
-        <span>{{event.name}}</span>
+    <mdl-list-item lines="3"
+                   *ngFor="let event of events$ | async | paginate:{ itemsPerPage: 10, currentPage: p}">
+      <mdl-list-item-primary-content  mdl-ripple (click)="onEventClick(event)">
+        <span>{{event.dateTime | date:'EEEE d MMMM y'}}</span>
         <mdl-list-item-text-body>
-          {{event.dateTime | date:'dd/MM/yyyy'}}<br/>
-          {{'TYPES.' + event.type | translate}}
+          <span class="event-list-container__type">{{'TYPES.' + event.type | translate}}</span> {{event.name}}<br/>
+
         </mdl-list-item-text-body>
       </mdl-list-item-primary-content>
       <a (click)="deleteEvent(event)"><i class="material-icons">delete</i></a>
