--- a/src/app/admin/admin-event-list/admin-event-list.component.html
+++ b/src/app/admin/admin-event-list/admin-event-list.component.html
@@ -16,10 +16,9 @@
     <mdl-list-item lines="3"
                    *ngFor="let event of events$ | async | paginate:{ itemsPerPage: 10, currentPage: p}">
       <mdl-list-item-primary-content  mdl-ripple (click)="onEventClick(event)">
-        <span>{{event.dateTime | date:'EEEE d MMMM y'}}</span>
+        <span class="event-list-container__type">{{'TYPES.' + event.type | translate}}</span> <span>{{event.dateTime | date:'EEEE d MMMM y'}}</span>
         <mdl-list-item-text-body>
-          <span class="event-list-container__type">{{'TYPES.' + event.type | translate}}</span> {{event.name}}<br/>
-
+          {{event.name}}<br/>
         </mdl-list-item-text-body>
       </mdl-list-item-primary-content>
       <a (click)="deleteEvent(event)"><i class="material-icons">delete</i></a>
