--- a/src/app/admin/track-list-selector/track-list-selector.component.html
+++ b/src/app/admin/track-list-selector/track-list-selector.component.html
@@ -8,10 +8,10 @@
     <mdl-list-item lines="2"
                    *ngFor="let track of tracks$ | async | trackFilter:filter | paginate:{ itemsPerPage: itemsPerPage, currentPage: p}">
       <mdl-list-item-primary-content (click)="onTrackClick(track)" mdl-ripple>
+        <span class="track-list-item__type">{{'TYPES.' + track.type | translate}}</span>
         <span>{{track.name}}</span>
         <mdl-list-item-sub-title>
             <span class="mdl-list__item-text-body">
-                  <span>{{'TYPES.' + track.type | translate}}</span>
                   <span><i class="mdi mdi-math-compass"></i> {{track.distance | number}} km</span>
               </span>
         </mdl-list-item-sub-title>
