--- a/src/app/admin/track-list-selector/track-list-selector.component.scss
+++ b/src/app/admin/track-list-selector/track-list-selector.component.scss
@@ -1,8 +1,5 @@
 @import "../../variables.scss";
-
-.pagination__controls /deep/ .ng2-pagination .current {
-  background: unquote("rgb(#{$color-primary})") !important;
-}
+@import "../../common.scss";
 
 .track-list {
   &__container {
@@ -11,5 +8,11 @@
 
   &__list{
     width: 400px;
+  }
+}
+
+.track-list-item {
+  &__type {
+    font-weight: bolder;
   }
 }
