--- a/src/app/admin/track-list-selector/track-list-selector.component.html
+++ b/src/app/admin/track-list-selector/track-list-selector.component.html
@@ -12,7 +12,8 @@
         <span>{{track.name}}</span>
         <mdl-list-item-sub-title>
             <span class="mdl-list__item-text-body">
-                  <span><i class="mdi mdi-math-compass"></i> {{track.distance | number}} km</span>
+                <span>({{track.openRunnerId}})</span>
+                <span><i class="mdi mdi-math-compass"></i> {{track.distance | number}} km</span>
               </span>
         </mdl-list-item-sub-title>
       </mdl-list-item-primary-content>
