--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,4 +1,4 @@
-@import "./variables";
+@import "styles/variables";
 @import '~angular2-mdl/scss/material-design-lite';
 @import '~mdi/scss/materialdesignicons.scss';
 
