--- a/src/app/event-browser/loop-link/loop-link.component.html
+++ b/src/app/event-browser/loop-link/loop-link.component.html
@@ -1,4 +1,4 @@
-<a class="mdl-layout__tab"
+<a class="mdl-layout__tab loop-link__tab"
    [class.is-active]="loop.$key === currentTrack?.$key"
    [routerLink]="['']" [queryParams]="{eventId:event?.$key,trackId:loop.$key}">
   Boucle {{index + 1}} (<i class="mdi mdi-math-compass"></i>{{loop.distance | number}} km)
