--- a/src/app/admin/admin.component.html
+++ b/src/app/admin/admin.component.html
@@ -4,17 +4,17 @@
       <mdl-layout-title>{{'ADMIN.TITLE' | translate:params }}</mdl-layout-title>
       <div class="mdl-layout-spacer"></div>
       <nav class="mdl-navigation">
-        <a class="mdl-navigation__link" routerLink="/"><i class="mdi mdi-settings"></i>{{ 'BACK' | translate }}</a>
+        <a class="mdl-navigation__link" routerLink="/">{{ 'BACK' | translate }}</a>
       </nav>
     </mdl-layout-header-row>
     <div class="jsrol-header__row mdl-layout__header-row">
       <div>
-        <a class="mdl-layout__tab"
+        <a class="mdl-layout__tab loop-link__tab"
            routerLink="/admin/tracks"
            routerLinkActive="is-active">{{'TRACK' | translate }} </a>
       </div>
       <div>
-        <a class="mdl-layout__tab"
+        <a class="mdl-layout__tab loop-link__tab"
            routerLink="/admin/events"
            routerLinkActive="is-active">{{'EVENT' | translate }}</a>
       </div>
