--- a/src/app/admin/track-list-selector/track-list-selector.component.scss
+++ b/src/app/admin/track-list-selector/track-list-selector.component.scss
@@ -1,5 +1,5 @@
-@import "../../variables.scss";
-@import "../../common.scss";
+@import "../../styles/variables";
+@import "../../styles/common";
 
 .track-list {
   &__container {
